EZP-30071: Implement responsive table in Sub-items

--- a/Resources/public/scss/modules/_sub.items.list.scss
+++ b/Resources/public/scss/modules/_sub.items.list.scss
@@ -2,6 +2,8 @@
 @import 'sub-items-list/grid.view.item';
 @import 'sub-items-list/grid.view';
 @import 'sub-items-list/no.items';
+@import 'sub-items-list/table.view.columns.toggler.list.element';
+@import 'sub-items-list/table.view.columns.toggler';
 @import 'sub-items-list/table.view.item';
 @import 'sub-items-list/table.view';
 @import 'sub-items-list/view.switcher.button';
