EZP-30066: As an editor I would like to see current location marked as selected in the content tree

--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -20,6 +20,19 @@ $list-item-height: calculateRem(20px);
         }
     }
 
+    &__link {
+        color: inherit;
+        display: flex;
+        align-items: center;
+        background: none;
+
+        &:hover,
+        &:focus {
+            text-decoration: none;
+            color: inherit;
+        }
+    }
+
     &__icon {
         height: $list-item-height;
         display: inline-flex;
