--- a/Resources/public/scss/ezplatform-modules.scss
+++ b/Resources/public/scss/ezplatform-modules.scss
@@ -1,6 +1,6 @@
-@import 'bundles/ezplatformadminui/scss/custom';
-@import 'bundles/ezplatformadminui/scss/functions/calculate.rem';
-@import 'bundles/ezplatformadminui/scss/mixins';
+@import './web/bundles/ezplatformadminui/scss/custom';
+@import './web/bundles/ezplatformadminui/scss/functions/calculate.rem';
+@import './web/bundles/ezplatformadminui/scss/mixins';
 @import 'modules/common';
 @import 'modules/multi.file.upload';
 @import 'modules/sub.items.list';
