--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -92,6 +92,10 @@ $list-item-height: calculateRem(20px);
         }
     }
 
+    &__load-more-btn-spinner {
+        margin-right: calculateRem(4px);
+    }
+
     .c-list {
         opacity: 0;
         list-style: none;
