--- a/Resources/public/scss/modules/content-tree/_main.scss
+++ b/Resources/public/scss/modules/content-tree/_main.scss
@@ -1,10 +1,9 @@
 .m-tree {
-    padding: calculateRem(8px) calculateRem(3px) calculateRem(8px) 0;
+    padding: 0 calculateRem(3px) calculateRem(30px) 0;
     min-width: calculateRem(250px);
     width: calculateRem(250px);
     max-width: 33vw;
     height: 100%;
-    overflow: auto;
 
     &__resize-handler {
         width: calculateRem(3px);
@@ -14,5 +13,24 @@
         right: 0;
         background: $ez-ground-base-pale;
         cursor: col-resize;
+    }
+
+    &__scrollable-wrapper {
+        height: 100%;
+        overflow: auto;
+        padding-top: calculateRem(8px);
+    }
+
+    &__collapse-all-btn {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        border-top: 1px solid $ez-ground-base-medium;
+        height: calculateRem(30px);
+        padding: calculateRem(7px);
+        font-size: calculateRem(11px);
+        text-align: right;
+        color: $ez-color-base-light;
+        cursor: pointer;
     }
 }
