EZP-30188: Add loading spinner to Content Tree

--- a/Resources/public/scss/modules/content-tree/_main.scss
+++ b/Resources/public/scss/modules/content-tree/_main.scss
@@ -21,6 +21,14 @@
         padding-top: calculateRem(8px);
     }
 
+    &__loading-spinner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
+
     &__collapse-all-btn {
         width: 100%;
         position: absolute;
