EZP-30207: Fix missing show more button for root location in Cotent Tree

--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -111,6 +111,12 @@ $list-item-height: calculateRem(20px);
         overflow: hidden;
     }
 
+    &--is-root-item {
+        > .c-list {
+            padding-left: 0;
+        }
+    }
+
     &--has-sub-items {
         > #{$list-item}__label {
             #{$list-item}__toggler {
