--- a/Resources/public/scss/modules/content-tree/_list.scss
+++ b/Resources/public/scss/modules/content-tree/_list.scss
@@ -3,3 +3,10 @@
     padding: 0 0 0 calculateRem(12px);
     list-style: none;
 }
+
+.m-tree__scrollable-wrapper {
+    > .c-list {
+        display: table;
+        width: 100%;
+    }
+}
