--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -70,11 +70,10 @@ $list-item-height: calculateRem(20px);
     &__load-more-btn {
         display: flex;
         align-items: center;
-        padding: 0;
-        background: none;
-        text-align: center;
+        padding: 0 calculateRem(4px);
+        background: $ez-white;
         color: $ez-color-base-dark;
-        border-radius: calculateRem(4px);
+        border: calculateRem(1px) solid $ez-color-base-dark;
         margin-left: calculateRem(26px);
         transition: background 0.3s $ez-admin-transition, color 0.3s $ez-admin-transition;
         font-size: calculateRem(12px);
@@ -84,7 +83,12 @@ $list-item-height: calculateRem(20px);
         }
 
         &:hover {
-            color: $ez-color-base-dark;
+            color: $ez-white;
+            background: $ez-color-base-dark;
+
+            .ez-icon {
+                fill: $ez-white;
+            }
         }
 
         .ez-icon {
