EZP-30368: Add 'no sub-items' message in Content Tree for root location with no sub-items

--- a/Resources/public/scss/modules/content-tree/_main.scss
+++ b/Resources/public/scss/modules/content-tree/_main.scss
@@ -41,4 +41,10 @@
         color: $ez-color-base-light;
         cursor: pointer;
     }
+
+    &__no-items-message {
+        padding: calculateRem(10px);
+        font-size: calculateRem(20px);
+        color: $ez-color-base-light;
+    }
 }
