--- a/Resources/public/scss/modules/content-tree/_main.scss
+++ b/Resources/public/scss/modules/content-tree/_main.scss
@@ -41,4 +41,11 @@
         color: $ez-color-base-light;
         cursor: pointer;
     }
+
+    &__no-items-message {
+        padding: calculateRem(10px);
+        font-size: calculateRem(12px);
+        font-style: italic;
+        color: $ez-color-base-dark;
+    }
 }
