Added basic styling for UDW

--- a/Resources/public/scss/ezplatform-modules.scss
+++ b/Resources/public/scss/ezplatform-modules.scss
@@ -6,3 +6,4 @@
 @import 'modules/sub.items.list';
 @import 'modules/content.tree';
 @import 'modules/universal.discovery';
+@import 'modules/udw/main';
