Fixed a bit fo styling issues

--- a/Resources/public/scss/modules/udw/tabs/browse/_main.scss
+++ b/Resources/public/scss/modules/udw/tabs/browse/_main.scss
@@ -4,6 +4,7 @@ $browse-tab: '.ez-browse-tab';
     grid-template-areas:
         'finder finder'
         'items actions';
+    grid-template-columns: 1fr calculateRem(230px);
     grid-gap: calculateRem(16px);
 
     &--with-preview {
