EZP-30525: Convert Browse Tab as a standalone ReactJS module

--- a/Resources/public/scss/modules/_ud.scss
+++ b/Resources/public/scss/modules/_ud.scss
@@ -6,3 +6,11 @@
 @import 'ud/view.switcher';
 @import 'ud/menu.button';
 @import 'ud/tab.selector';
+@import 'ud/finder';
+@import 'ud/finder.branch';
+@import 'ud/finder.leaf';
+@import 'ud/content.meta.preview';
+@import 'ud/selected.locations';
+@import 'ud/selected.locations.item';
+@import 'ud/grid';
+@import 'ud/grid.item';
